--- a/doom.html
+++ b/doom.html
@@ -1,84 +1,71 @@
-<title>Doom on the Web</title> <script type='text/javascript'> var Module = { noInitialRun: true, };
-  var lastPrint = Date.now();
-  function clearConsole() {
-    (document.getElementById('output') || {}).innerHTML = '';
-  }
-  var print = function(text) {
-    //return;
-    text = text.replace('<b>', '').replace('</b>', '');
-    var element = document.getElementById('output')
-    var diff = Date.now() - lastPrint;
-    if (!element) {
-      alert(text);
-    } else {
-      element.value += text + '\n';
-      // scroll down
-      var len = element.textLength;
-      element.setSelectionRange(len-1, len);
-    }
-    lastPrint = Date.now();
-  }
-</script>
-<script src='doom.cc.js' type='text/javascript'></script>
-<script type='text/javascript'>
-  var PRE_NOTICE = "(resize using ctrl-+)";
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Графический редактор</title>
+    <style>
+        #canvas {
+            border: 1px solid black;
+        }
+    </style>
+</head>
+<body>
+    <canvas id="canvas" width="500" height="500"></canvas>
+    <br>
+    <input type="color" id="colorPicker">
+    <input type="range" id="lineWidthSlider" min="1" max="10" value="1">
+    <button onclick="setMode('draw')">Рисовать</button>
+    <button onclick="setMode('erase')">Ластик</button>
+    <button onclick="setMode('fill')">Заливка</button>
 
-  var dts = 0, num = 0, lastHUD = Date.now(), totalTime = 0;
-  var lastTime = Date.now();
-  function showFPS() {
-    var now = Date.now();
-    var dt = (now - lastTime)/1000;
-    lastTime = now;
-    dts += dt;
-    num++;
-    totalTime += dt;
-    if (now - lastHUD > 333) {
-      //document.getElementById('fps').innerHTML = '<b>FPS: ' + Math.ceil(1/(dts/num)) + '</b>';
-      document.getElementById('fps').innerHTML = '<small>' +
-        PRE_NOTICE + ' <b>FPS: ' + ((1/(dts/num)).toString()+'     ').substr(0,5) + '</b>'
-      + '</small>';
-      lastHUD = now;
-      dts = 0;
-      num = 0;
-    }
-    if (totalTime > 10) PRE_NOTICE = '';
-  }
-  showFPS(0);
+    <script>
+        var canvas = document.getElementById('canvas');
+        var ctx = canvas.getContext('2d');
+        var mode = 'draw';
+        var isDrawing = false;
 
-  var mainLoopIntervalId = null, logClearerIntervalId;
-  function mainLoop() {
-    try {
-      Module._doOneIteration();
-    } catch(e) {
-      print('FAILURE in loop iteration: <b>' + e + '</b>');
-      clearInterval(mainLoopIntervalId);
-      clearInterval(logClearerIntervalId);
-      try {
-        Module.SDL_Quit();
-      } catch(e){}
-      print = function(){};
-      throw e;
-    }
-    showFPS();
-  }
+        canvas.addEventListener('mousedown', startDrawing);
+        canvas.addEventListener('mousemove', draw);
+        canvas.addEventListener('mouseup', stopDrawing);
 
-  function onLoad() {
-    clearConsole();
+        function startDrawing(e) {
+            isDrawing = true;
+            draw(e);
+        }
 
-    // Pass canvas and context to the generated code, and do the actual run() here
-    Module.canvas = document.getElementById('canvas');
-    Module.ctx2D = Module.canvas.getContext('2d');
-    if (!Module.ctx2D) {
-      alert('Canvas not available :(');
-      return;
-    }
-    Module.run();
-    mainLoopIntervalId = setInterval(mainLoop, 1/100);
+        function draw(e) {
+            if (!isDrawing) return;
+            var x = e.clientX - canvas.offsetLeft;
+            var y = e.clientY - canvas.offsetTop;
+            var color = document.getElementById('colorPicker').value;
+            var lineWidth = document.getElementById('lineWidthSlider').value;
 
-    logClearerIntervalId = setInterval(function() {
-      if (Date.now() - lastPrint > 1500) {
-        clearConsole();
-      }
-    }, 3000);
-  }
-</script>
+            ctx.beginPath();
+            ctx.lineCap = 'round';
+            ctx.strokeStyle = color;
+            ctx.lineWidth = lineWidth;
+
+            if (mode === 'draw') {
+                ctx.lineTo(x, y);
+                ctx.stroke();
+            } else if (mode === 'erase') {
+                ctx.globalCompositeOperation = 'destination-out';
+                ctx.lineTo(x, y);
+                ctx.stroke();
+                ctx.globalCompositeOperation = 'source-over';
+            } else if (mode === 'fill') {
+                ctx.fillStyle = color;
+                ctx.fillRect(0, 0, canvas.width, canvas.height);
+            }
+        }
+
+        function stopDrawing() {
+            isDrawing = false;
+            ctx.closePath();
+        }
+
+        function setMode(newMode) {
+            mode = newMode;
+        }
+    </script>
+</body>
+</html>
