--- a/doom.html
+++ b/doom.html
@@ -1,70 +1,51 @@
 <html>
 <head>
-    <title>Графический редактор</title>
-    <style>
-        #canvas {
-            border: 1px solid black;
-        }
-    </style>
+  <title>Графический редактор</title>
+  <style>
+    canvas {
+      border: 1px solid black;
+      touch-action: none;
+    }
+  </style>
 </head>
 <body>
-    <canvas id="canvas" width="500" height="500"></canvas>
-    <br>
-    <input type="color" id="colorPicker">
-    <input type="range" id="lineWidthSlider" min="1" max="10" value="1">
-    <button onclick="setMode('draw')">Рисовать</button>
-    <button onclick="setMode('erase')">Ластик</button>
-    <button onclick="setMode('fill')">Заливка</button>
-
-    <script>
-        var canvas = document.getElementById('canvas');
-        var ctx = canvas.getContext('2d');
-        var mode = 'draw';
-        var isDrawing = false;
-
-        canvas.addEventListener('mousedown', startDrawing);
-        canvas.addEventListener('mousemove', draw);
-        canvas.addEventListener('mouseup', stopDrawing);
-
-        function startDrawing(e) {
-            isDrawing = true;
-            draw(e);
-        }
-
-        function draw(e) {
-            if (!isDrawing) return;
-            var x = e.clientX - canvas.offsetLeft;
-            var y = e.clientY - canvas.offsetTop;
-            var color = document.getElementById('colorPicker').value;
-            var lineWidth = document.getElementById('lineWidthSlider').value;
-
-            ctx.beginPath();
-            ctx.lineCap = 'round';
-            ctx.strokeStyle = color;
-            ctx.lineWidth = lineWidth;
-
-            if (mode === 'draw') {
-                ctx.lineTo(x, y);
-                ctx.stroke();
-            } else if (mode === 'erase') {
-                ctx.globalCompositeOperation = 'destination-out';
-                ctx.lineTo(x, y);
-                ctx.stroke();
-                ctx.globalCompositeOperation = 'source-over';
-            } else if (mode === 'fill') {
-                ctx.fillStyle = color;
-                ctx.fillRect(0, 0, canvas.width, canvas.height);
-            }
-        }
-
-        function stopDrawing() {
-            isDrawing = false;
-            ctx.closePath();
-        }
-
-        function setMode(newMode) {
-            mode = newMode;
-        }
-    </script>
+  <h1>Графический редактор</h1>
+  <canvas id="canvas" width="500" height="500"></canvas>
+  <div>
+    <button onclick="changeColor('red')">Красный</button>
+    <button onclick="changeColor('green')">Зеленый</button>
+    <button onclick="changeColor('blue')">Синий</button>
+    <button onclick="changeColor('black')">Черный</button>
+  </div>
+  <div>
+    <button onclick="changeThickness(1)">Тонкая</button>
+    <button onclick="changeThickness(5)">Средняя</button>
+    <button onclick="changeThickness(10)">Толстая</button>
+  </div>
+  <div>
+    <button onclick="enableEraser()">Ластик</button>
+    <button onclick="disableEraser()">Рисовать</button>
+  </div>
 </body>
-</html>
+<script>
+  var canvas = document.getElementById('canvas');
+  var context = canvas.getContext('2d');
+  var isDrawing = false;
+  var isErasing = false;
+  var color = 'black';
+  var thickness = 1;
+
+  canvas.addEventListener('touchstart', startDrawing);
+  canvas.addEventListener('touchmove', draw);
+  canvas.addEventListener('touchend', stopDrawing);
+
+  function startDrawing(event) {
+    isDrawing = true;
+    var x = event.touches[0].clientX - canvas.offsetLeft;
+    var y = event.touches[0].clientY - canvas.offsetTop;
+    context.beginPath();
+    context.moveTo(x, y);
+  }
+
+  function draw(event) {
+   
